# ShortProcess

./: .gitignore  AGENTS.md  Dockerfile  README.md  TRACKING.md  pyproject.toml
src/: main.py  process_monitor.py  ui.py
tests/: test_monitor.py
